<resources>
    <string name="app_name">Calculadora de fibra</string>

    <string name="titleActivity1">Ingrese los datos</string>
    <string name="ctaBuscada">Cuenta buscada</string>
    <string name="ctaInicial">Primera cuenta del cable</string>
    <string name="hintCta">Ingrese N° cuenta</string>
    <string name="hintFibra">Ingrese cantidad de fibras</string>
    <string name="tamano">Tamaño del cable (fibras)</string>
    <string name="buttonCalcular">Buscar</string>

    <string name="titleActivity2">Resultado</string>
    <string name="titleActivity3">Mapas</string>
    <string name="nodoBuscado">Nodo Buscado:</string>
    <string name="nombreNodo">Ingrese nombre del nodo</string>
    <string name="resultado">Resultado</string>
    <string name="ir">Ir</string>
    <string name="buscarNodos">Buscar Nodos</string>

</resources>