<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:visibility="visible"
    tools:context=".ActivityGPS">

    <TextView
        android:id="@+id/tvTituloGPS"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titleActivity3"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvBuscarNodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tvBuscarNodo"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/nodoBuscado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloGPS" />

    <EditText
        android:id="@+id/nodoBuscado"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:background="@drawable/borde_redondo"
        android:backgroundTint="@color/editText"
        android:ems="10"
        android:hint="@string/nombreNodo"
        android:inputType="text"
        android:shadowColor="#000000"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnBuscar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBuscarNodo"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orange"
        android:onClick="buscarNodo"
        android:text="@string/buttonCalcular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvResultadoNodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nodoBuscado" />

    <TextView
        android:id="@+id/tvResultadoNodo"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/white"

        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/btnIr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

    <Button
        android:id="@+id/btnIr"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orange"

        android:text="@string/ir"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/tvResultadoNodo"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>